fix more hidden overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -948,7 +948,7 @@ table tfoot td {
   margin: 0 auto 10px;
   -webkit-border-radius: 100%;
           border-radius: 100%;
-  overflow: hidden;
+  overflow: auto;
   background-color: #333030;
 }
 
@@ -1224,7 +1224,7 @@ a.newer-posts:hover {
   margin: 0;
   max-height: 500px;
   background-color: #333030;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .page-cover-image figure {
